Add procedure mesh, use resource manager to load the world

--- a/example/skinning/index.html
+++ b/example/skinning/index.html
@@ -8,6 +8,9 @@
         html, body, #main {
             height: 100%;
         }
+        body {
+            margin: 0px;
+        }
     </style>
 </head>
 <body>
